# anno

./: .gitignore  Cargo.toml  ExportDecomp.java  STATUS.md  export_decomp.py
crates/anno-audio/: Cargo.toml
crates/anno-audio/src/: adpcm.rs  engine.rs  lib.rs  stream.rs  wave.rs
crates/anno-formats/: Cargo.toml
crates/anno-formats/src/: bsh.rs  cod.rs  col.rs  lib.rs  szs.rs
crates/anno-game/: Cargo.toml
crates/anno-game/src/: lib.rs
crates/anno-net/: Cargo.toml
crates/anno-net/src/: lib.rs  protocol.rs  session.rs  transport.rs
crates/anno-render/: Cargo.toml
crates/anno-render/src/: camera.rs  framebuffer.rs  iso.rs  lib.rs  palette.rs  sprite.rs
crates/anno-sim/: Cargo.toml
crates/anno-sim/src/: ai.rs  building.rs  carrier.rs  combat.rs  coverage.rs  data_bridge.rs  economy.rs  entity.rs  island_map.rs  lib.rs  ocean_map.rs  pathfinding.rs  player.rs  population.rs  production.rs  simulation.rs  trade.rs  types.rs  warehouse.rs
docs/re-notes/: architecture.md
